# amethyst

./: .gitignore  LICENSE.MD  README.MD  pyproject.toml
amethyst/: __main__.py  amethyst.py  commands_main.py  io.py  mol_2_networkx.py  substitution.py  utils.py
tests/: comma_input.txt  newline_input.txt  semicolon_input.txt  smi_atom_map.txt  smi_isotope.txt  smi_mixed_inline.txt  smi_mixed_separate.txt  test_arom_sub.py  test_enumerate.py  test_format_check.py  test_io.py  test_mol_atom_recog.py  test_placeholder_sub.py  test_sat_ring_sub.py  test_substitution.py
