[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amethyst"
version = "0.0.1"
description = ""
dependencies = [
    "rdkit ==2023.3.3",
    "autopep8 ==2.0.4",
    "pytest ==7.4.3",
    "networkx ==3.2.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel ==6.29.2",
    "pandas ==2.2.0",
]
