[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amethyst"
version = "0.0.1"
description = ""
dependencies = [
    "rdkit ==2023.3.3",
    "autopep8 ==2.0.4",
    "pytest ==7.4.3",
    "loguru ==0.7.2",
    "click ==8.1.7",
]

[project.optional-dependencies]
dev = [
    "ipykernel ==6.29.2",
    "pandas ==2.2.0",
    "black ==24.2.0",
    "ruff ==0.2.2",
]
