[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amethyst"
version = "0.0.1"
description = ""
dependencies = [
    "autopep8 ==2.0.4",
    "click ==8.1.7",
    "loguru ==0.7.2",
    "pytest ==7.4.3",
    "rdkit ==2023.9.6",
]

[project.optional-dependencies]
dev = [
    "black ==24.2.0",
    "ruff ==0.2.2",
]
